--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
 	},
 	"module": "src/index.js",
 	"dependencies": {
-		"@servicenow/ui-core": "paris",
-		"@servicenow/ui-renderer-snabbdom": "paris",
+		"@fortawesome/free-solid-svg-icons": "^5.15.0",
 		"@servicenow/cli-archetype": "18.0.0",
 		"@servicenow/cli-component-archetype": "18.0.0",
-		"@servicenow/sass-theme": "paris",
-		"@servicenow/sass-kit": "paris",
 		"@servicenow/library-translate": "paris",
+		"@servicenow/sass-kit": "paris",
+		"@servicenow/sass-theme": "paris",
+		"@servicenow/ui-core": "paris",
+		"@servicenow/ui-renderer-snabbdom": "paris",
 		"nanoid": "^3.1.12"
 	},
 	"devDependencies": {
